<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uoc.pra2.Login" >
  
    <TextView
	    android:id="@+id/TextViewPassword"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editTextUsuario"
	    android:layout_below="@+id/editTextUsuario"
	    android:layout_marginTop="30dp"
	    android:text="@string/textViewPassword" />

		<EditText
		    android:id="@+id/editTextPassword"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/TextViewPassword"
		    android:layout_below="@+id/TextViewPassword"
		    android:ems="10"
		    android:inputType="textPassword"
		    android:singleLine="true" />

	<Button
	    android:id="@+id/buttonLogin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editTextPassword"
	    android:layout_alignRight="@+id/editTextPassword"
	    android:layout_below="@+id/editTextPassword"
	    android:layout_marginTop="43dp"
	    android:text="@string/buttonLogin" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textViewUsuario"
	    android:layout_alignParentTop="true"
	    android:layout_alignRight="@+id/editTextUsuario"
	    android:layout_marginTop="21dp"
	    android:gravity="center"
	    android:text="EnviaUOC"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="#527fa4"
	    android:textSize="36sp" />

	<EditText
	    android:id="@+id/editTextUsuario"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textViewUsuario"
	    android:layout_centerHorizontal="true"
	    android:ems="10"
	    android:singleLine="true" >

		<requestFocus />

	</EditText>  
	<TextView
	    android:id="@+id/textViewUsuario"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editTextUsuario"
	    android:layout_below="@+id/textView1"
	    android:layout_marginTop="24dp"
	    android:text="@string/textViewUsuario" />

</RelativeLayout>
